--- a/deepti1/index.html
+++ b/deepti1/index.html
@@ -9,11 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Loading Screen -->
+    <!-- Loading Screen with Progress Counter -->
     <div class="loader">
         <div class="loader-inner">
             <div class="loading-text">ElectriGo</div>
-            <div class="loading-bar"></div>
+            <div class="loading-progress">
+                <div class="loading-bar"></div>
+                <div class="loading-percentage">0%</div>
+            </div>
         </div>
     </div>
 
@@ -130,41 +133,41 @@
 
     <!-- Footer -->
     <footer class="footer">
-    <div class="container">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <h3>ElectriGo</h3>
-                <p>Driving the future of sustainable mobility.</p>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <h3>ElectriGo</h3>
+                    <p>Driving the future of sustainable mobility.</p>
+                </div>
+                <div class="footer-links">
+                    <h4>Quick Links</h4>
+                    <a href="#home">Home</a>
+                    <a href="#vehicles">Vehicles</a>
+                    <a href="#testimonials">Testimonials</a>
+                    <a href="#stats">Statistics</a>
+                    <a href="#contact">Contact</a>
+                </div>
+                <div class="footer-contact">
+                    <h4>Contact Us</h4>
+                    <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
+                    <p><i class="fas fa-envelope"></i> info@electricgo.com</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
             </div>
-            <div class="footer-links">
-                <h4>Quick Links</h4>
-                <a href="#home">Home</a>
-                <a href="#vehicles">Vehicles</a>
-                <a href="#testimonials">Testimonials</a>
-                <a href="#stats">Statistics</a>
-                <a href="#contact">Contact</a>
-            </div>
-            <div class="footer-contact">
-                <h4>Contact Us</h4>
-                <p><i class="fas fa-phone"></i> +91 6206115029</p>
-                <p><i class="fas fa-envelope"></i> deeptikumari0404@gmail.com</p>
-                <div class="social-links">
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.instagram.com/deep__queen_/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/deepti-sahu-3049a8332?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <div class="footer-bottom">
+                <p>&copy; 2023 ElectriGo. All rights reserved.</p>
+                <div class="legal-links">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Service</a>
                 </div>
             </div>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2023 ElectriGo. All rights reserved.</p>
-            <div class="legal-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-            </div>
-        </div>
-    </div>
-</footer>
+    </footer>
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="back-to-top" aria-label="Back to top">
